# pastebin

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pg_cron.sh  pyproject.toml  requirements.txt
docker/: celery.sh
drive/: message.py
nginx/: Dockerfile  default.conf
pastebin/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pcloud_api/: message.py
pg_cron/: Dockerfile
static/favicon/: browserconfig.xml  site.webmanifest
templates/: base.html  error404.html  feed.html
text/: admin.py  celery.sh  forms.py  hash_generation.py  models.py  service.py  tasks.py  urls.py  views.py
text/templates/: delete_message.html  delete_message_done.html  index.html  input_text.html  message.html  message_feed.html  user_message_feed.html
users/: admin.py  authentication.py  forms.py  models.py  pipeline.py  urls.py  views.py
users/templates/: delete_profile.html  delete_profile_done.html  edit_profile.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
